--- a/.gitattributes
+++ b/.gitattributes
@@ -1,8 +1,10 @@
 ###############################################################################
 # Set default behavior to automatically normalize line endings.
 ###############################################################################
-* text=auto
-
+*js linguist-detectable=false
+*css linguist-detectable=false
+*Csharp linguist-detectable=true
+*html linguist-detectable=false
 ###############################################################################
 # Set default behavior for command prompt diff.
 #
